feat: add last visited product function, fix product viewing
